style.css
html {-webkit-text-size-adjust: 100%; -moz-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
body {background-color: #fdfdfd; color: #234; margin: 0; font-size: 16px;}
h1 {margin-bottom: 32px; font-size: 2.6em;}
h2 {margin-top: 48px;}
h1, h2 {color: #234;}
h3, h4, h5 {color: #345;}
h1, h2, h3, h4, h5, a, p, span, body, div {font-weight: normal; font-family: 'Lato', Verdana, Helvetica, sans-serif;}
.header {background: linear-gradient(to bottom, #fdfdfd 10%, #f4f4f8 90%); width: 100%; padding-top: 16px; padding-bottom: 32px;}
.header-profile-picture, .header-text {display: inline-block;}
.header-name h1 {margin: 0;}
.header-subtitle {margin-bottom: 12px;}
.header-profile-picture {width: 130px; height: 130px; margin-right: 12px; border-radius: 50%; background-image: url(files/me.jpeg); background-position: center; background-size: contain;}
.content {max-width: 748px; padding-left: 16px; padding-right: 16px; margin: auto; margin-top: 48px;}
.hr {width: 100%; height: 1px; margin: 48px 0; background-color: #d6dbdf;}
a {color: #2471a3; text-decoration: none;}
a:focus, a:hover {color: #f09228;}
p {line-height: 1.5em;}
.nobreak {white-space: nowrap;}
.noselect {-webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;}
.bold {font-weight: bold;}
.big {font-weight: bold; font-size: medium;}
.italic {font-style: italic;}
.bulletpoints {line-height: 1.5em;}
.row {box-sizing: border-box;}
.row-media {display: block; float: left; width: 160px; height: 90px; background-position: center; background-size: contain; background-repeat: no-repeat; border-radius: 6px;}
.row-text {display: block; float: left; margin-left: 12px; line-height: 1.5em; max-width: 566px;}
.row-text span {line-height: inherit;}
.clearfix {content: ""; clear: both; display: table;}
.publication {margin-bottom: 32px;}
.press {width: 100px; height: 80px; border: 1px solid #def; margin-right: 12px; background-size: cover;}  
.press-borderless {width: 100px; height: 80px; margin-right: 12px; background-size: cover;}  
.img-contain {background-size: contain !important;}
.footer {background-color: #345; width: 100%}
.footer-content {color: #fff; font-size: 10px; padding: 6px 0; max-width: 968px; margin: auto;}
.header-icon {display: block; float: left; margin: 5px; background-position: center; background-size: contain; background-repeat: no-repeat; border-radius: 6px;width: 30px; height: 30px;}
@media only screen and (max-width: 1150px) {
    .header-profile-picture, .header-text {display: block; margin: auto; text-align: center;}
    .header-profile-picture {margin-bottom: 12px; width: 140px; height: 140px;}
    body {font-size: 18px;}
    a.btn {padding: 20px;}
}

@media only screen and (max-width: 1000px) {
    .publication {margin-bottom: 46px;}
    .publication .row-media {width: 260px; height: 130px; margin: auto; margin-bottom: 12px; display: block;}
    .publication .row-text {display: block; width: 100%; margin-left: 0;}
    .press {display: block;}
}

